--- a/response_tests.ipynb
+++ b/response_tests.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +24,50 @@
     }
    ],
    "source": [
-    "response = requests.get(\"http://127.0.0.1:8000\")\n",
+    "# basic response when hitting the endpoint\n",
+    "url = \"http://127.0.0.1:8000\"\n",
+    "response = requests.get(url)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"detail\":[{\"type\":\"missing\",\"loc\":[\"query\",\"text\"],\"msg\":\"Field required\",\"input\":null,\"url\":\"https://errors.pydantic.dev/2.6/v/missing\"}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ner_url = \"http://127.0.0.1:8000/entities\"\n",
+    "\n",
+    "payload = {\n",
+    "    \"text\" : \"Egypt has reinforced its frontier with Gaza and warned Israel.\"\n",
+    "    }\n",
+    "response = requests.post(ner_url, json = payload)\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"detail\":[{\"type\":\"missing\",\"loc\":[\"query\",\"text\"],\"msg\":\"Field required\",\"input\":null,\"url\":\"https://errors.pydantic.dev/2.6/v/missing\"}]}\n"
+     ]
+    }
+   ],
+   "source": [
     "print(response.text)"
    ]
   },
