--- a/response_tests.ipynb
+++ b/response_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"detail\":[{\"type\":\"missing\",\"loc\":[\"query\",\"text\"],\"msg\":\"Field required\",\"input\":null,\"url\":\"https://errors.pydantic.dev/2.6/v/missing\"}]}\n"
+      "{\"entities\":[[\"Egypt\",\"GPE\"],[\"Gaza\",\"GPE\"],[\"Israel\",\"GPE\"]]}\n"
      ]
     }
    ],
@@ -56,27 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"detail\":[{\"type\":\"missing\",\"loc\":[\"query\",\"text\"],\"msg\":\"Field required\",\"input\":null,\"url\":\"https://errors.pydantic.dev/2.6/v/missing\"}]}\n"
+      "{\"entities\":[[\"Egypt\",\"GPE\"],[\"Gaza\",\"GPE\"],[\"Israel\",\"GPE\"]]}\n"
      ]
     }
    ],
    "source": [
     "print(response.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
