--- a/response_tests.ipynb
+++ b/response_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"entities\":[[\"Egypt\",\"GPE\"],[\"Gaza\",\"GPE\"],[\"Israel\",\"GPE\"]]}\n"
+      "{\"entities\":{\"ents_labels\":[[\"Egypt\",\"GPE\"],[\"Gaza\",\"GPE\"],[\"Israel\",\"GPE\"]],\"entities\":[\"Egypt\",\"Gaza\",\"Israel\"],\"labels\":{\"GPE\":3}}}\n"
      ]
     }
    ],
@@ -56,20 +56,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"entities\":[[\"Egypt\",\"GPE\"],[\"Gaza\",\"GPE\"],[\"Israel\",\"GPE\"]]}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['entities'])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(response.text)"
+    "results = response.json()\n",
+    "results.keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Egypt', 'GPE'], ['Gaza', 'GPE'], ['Israel', 'GPE']]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['entities']['ents_labels']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
